# ErrorEstimationForH1

./: .gitignore  README.md
ErrorEstimation/: .gitignore  CMakeLists.txt  naca-circle.msh
ErrorEstimation/ErrorEstimation/: ProblemConfig.h  TPZHybridH1CreateH1Reconstruction.cpp  TPZMixedErrorEstimate.cpp  TPZPostProcessError.cpp
ErrorEstimation/ErrorEstimation/Material/: TPZPressureProjection.h
ErrorEstimation/Projects/: CMakeLists.txt
ErrorEstimation/Projects/ErrorEstimationH1HybridH1/: CMakeLists.txt  TPZMixedErrorEstimate.h  TPZPostProcessError.cpp  TPZPostProcessError.h  main.cpp
ErrorEstimation/Projects/ErrorNaca/: 2DSqrtProblem.cpp  2DSqrtProblem.geo  2DSqrtProblem.msh  CMakeLists.txt  ConstrastingpermeabilityProblem.cpp  ConstrastingpermeabilityProblem.geo  ConstrastingpermeabilityProblem.msh  ErrorNaca.cpp  LshapedProblem.cpp  LshapedProblem.geo  LshapedProblem.msh  NacaEquation.nb  TPZMeshModeling.py  naca-circle.msh  naca-circle.py
ErrorEstimation/Projects/HybridH1/: InputTreatment.cpp  MeshInit.cpp  Solver.cpp  main_HybridH1vsMixed.cpp
ErrorEstimation/Projects/Meshes/: Quad.geo  Quad.msh
ErrorEstimation/Projects/Tools/: Tools.cpp
neopz/Integral/: pzquad.h
neopz/Material/DarcyFlow/: TPZDarcyFlow.cpp  TPZMixedDarcyFlow.cpp
neopz/Matrix/: pzfmatrix.cpp
neopz/Mesh/: pzelctemp.cpp  pzintel.cpp  pzmultiphysicscompel.cpp
neopz/Pre/: TPZAnalyticSolution.cpp  TPZAnalyticSolution.h
neopz/Util/: log4cxx.cfg
